# cdks

./: README.md
cdks/: .gitignore  Cargo.toml  README.md  docker-compose.yaml
cdks/embeddings/: Cargo.toml
cdks/embeddings/src/: embeddings.rs  lib.rs  service.rs
cdks/http_server/: Cargo.toml
cdks/http_server/src/: app.rs  client.rs  config.rs  error.rs  graph.rs  handlers.rs  lib.rs  service.rs  types.rs  utils.rs
cdks/neo4j_service/: Cargo.toml
cdks/neo4j_service/src/: graph.rs  lib.rs  neo4j.rs  neo4j_builder.rs  neo4j_service.rs
