[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
serde = "1.0.188"
serde_json = "1.0.107"
neo4j = { path = "../neo4j_service" }
strum_macros = "0.25.2"
reqwest = { version = "0.11.22", features = ["json"] }
dotenv = "0.15.0"
regex = "1.9.6"
tokio = "1.32.0"
log = "0.4.20"
env_logger = "0.10.0"
